tests/error/misc_errors/nested_arg_flag.err
Error: Invalid type argument (at $FILE:7:16)
  | 
5 | 
6 | @guppy.declare
7 | def foo(x: list[qubit @owned]) -> qubit: ...
  |                 ^^^^^^^^^^^^ Not a valid type argument

Guppy compilation failed due to 1 previous error
